--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-"<h1> Selamat Datang di Website Saya </h1>" 
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=2">
+	<center><title>LATIHAN PWEB</title></center>
+</head>
+<body>
+	<center><p>Abimanyu Putra Suteja</p></center>
+
+</body>
+</html>
